# Blender-Launcher-V2-bazelized

./: .bazelrc  BUILD.bazel  requirements_lock.txt
source/resources/: BUILD
tools/: BUILD  generate_resources_bazel.py
