load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@blender_launcher_pip//:requirements.bzl", "requirement")

# Generate global.qss and resources_rc.py
genrule(
    name = "generate_resources",
    srcs = [
        "//source/resources:qrc_file",
        "//source/resources:css_files",
        "//source/resources:resource_data",
    ],
    outs = ["resources_rc.py"],
    cmd = "$(execpath //tools:generate_resources_bazel) $(location resources_rc.py) $(location //source/resources:qrc_file) $(locations //source/resources:css_files)",
    tools = ["//tools:generate_resources_bazel"],
)

# resources_rc module
py_library(
    name = "resources_rc",
    srcs = [":generate_resources"],
    imports = ["."],
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

py_binary(
    name = "blender_launcher",
    srcs = ["source/main.py"],
    data = [
        "//source/resources:resources",
    ],
    imports = ["source"],
    deps = [
        ":resources_rc",
        "//source/items:items",
        "//source/modules:modules",
        "//source/threads:threads",
        "//source/utils:utils",
        "//source/widgets:widgets",
        "//source/windows:windows",
        requirement("pyside6-essentials"),
        requirement("semver"),
    ],
    main = "source/main.py",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)
